--- a/app/views/access_tokens/index.html.erb
+++ b/app/views/access_tokens/index.html.erb
@@ -43,7 +43,7 @@
               <% end %>
             </td>
             <td class="text-end">
-              <%= link_to "Validate", access_token_validation_path(access_token),
+              <%= link_to "Validate", access_token_validations_path(access_token_id: access_token.id),
                           class: "text-primary text-decoration-none me-3",
                           data: { turbo_method: :post } %>
               <%= link_to "Delete", access_token_path(access_token),
